--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "rsuite": "^5.29.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
