--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
+    "final-form": "^4.20.9",
     "framer-motion": "^10.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-final-form": "^6.5.9",
     "react-image-gallery": "^1.2.11",
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
