--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
     "final-form": "^4.20.9",
+    "firebase": "^9.19.1",
     "framer-motion": "^10.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
