--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "cohere-ai": "^6.2.0",
     "dotenv": "^16.0.3",
     "final-form": "^4.20.9",
     "firebase": "^9.19.1",
